RESOLVED FIXED22503
createFontCustomPlatformData() crashes if CGFontCreateWithPlatformFont() returns NULL
https://bugs.webkit.org/show_bug.cgi?id=22503
Summary createFontCustomPlatformData() crashes if CGFontCreateWithPlatformFont() retu...
Pierre-Olivier Latour
Reported 2008-11-25 16:29:57 PST
createFontCustomPlatformData() crashes if CGFontCreateWithPlatformFont() returns NULL: CGFontRef cgFontRef = CGFontCreateWithPlatformFont(&fontRef); #ifndef BUILDING_ON_TIGER // Workaround for <rdar://problem/5675504>. if (!CGFontGetNumberOfGlyphs(cgFontRef)) { CFRelease(cgFontRef); <----- CRASH cgFontRef = 0; } #endif Original problem is here: <rdar://problem/6401604> 10A222 + r38744: WebCore crashes in demo that uses custom font
Attachments
Patch v1 (1.27 KB, patch)
2008-11-25 16:40 PST, Pierre-Olivier Latour
mrowe: review+
Pierre-Olivier Latour
Comment 1 2008-11-25 16:40:16 PST
Created attachment 25511 [details] Patch v1
Mark Rowe (bdash)
Comment 2 2008-11-25 16:43:46 PST
Comment on attachment 25511 [details] Patch v1 r=me
Pierre-Olivier Latour
Comment 3 2008-11-25 16:54:37 PST
Sending WebCore/ChangeLog Sending WebCore/platform/graphics/mac/FontCustomPlatformData.cpp Transmitting file data .. Committed revision 38770.
Note You need to log in before you can comment on or make changes to this bug.