2008-11-25  Pierre-Olivier Latour  <pol@apple.com>

Reviewed by Mark Rowe.

        createFontCustomPlatformData() crashes if CGFontCreateWithPlatformFont() returns NULL

        https://bugs.webkit.org/show_bug.cgi?id=22503

        * platform/graphics/mac/FontCustomPlatformData.cpp:
        (WebCore::createFontCustomPlatformData):



Canonical link: https://commits.webkit.org/30978@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38770 268f45cc-cd09-0410-ab3c-d52691b4dbfc